--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,18 @@
 h1 {
-  text-align: center;
-  color: blue;
   font-style: italic;
+  text-align: center;
+  text-decoration-color: red;
+}
+
+
+img {
+  display:block;
+  margin-left:auto;
+  margin-right:auto;
+  width:30%
+}
+
+.jumbotron {
+  color:white;
+  background-color:green;
 }
